<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F6F5F5"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_scape_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_color"
            app:title="Профіль"
            app:titleTextColor="@color/black">

            <ImageView
                android:id="@+id/logoutImageView"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_baseline_logout_24"
                android:contentDescription="Log out" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/brand_yellow"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="140dp"
                android:layout_height="140dp"
                app:cardCornerRadius="70dp"
                android:layout_marginTop="35dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    android:contentDescription="Profile Picture" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/fullNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="KG Official"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Факультет"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/facultyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1000K+"
                        android:textColor="@color/brand_yellow"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Група"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/groupTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="500K+"
                        android:textColor="@color/brand_yellow"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Здано робіт"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/numberOfWorksTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="33.1K+"
                        android:textColor="@color/brand_yellow"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="25dp">

            <!-- Phone Information -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_baseline_phone_24"
                    android:contentDescription="@string/phone_icon_description" />

                <TextView
                    android:id="@+id/phoneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="+92345-1234567"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- Birthday Information -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_birthday"
                    android:contentDescription="@string/birthday_icon_description" />

                <TextView
                    android:id="@+id/birthdayTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="12-04-2002"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- Supervisor Information -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/baseline_supervisor_account_24"
                    android:contentDescription="@string/supervisor_icon_description" />

                <TextView
                    android:id="@+id/superVisorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="Karachi- Pakistan"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- Research Information -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/baseline_check_box_24"
                    android:contentDescription="@string/research_icon_description" />

                <TextView
                    android:id="@+id/researchTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="Show all comments"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- Payment Form Information -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_payment"
                    android:contentDescription="@string/payment_icon_description" />

                <TextView
                    android:id="@+id/paymentFormTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="Форма оплати: "
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- Mark Information -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_grade"
                    android:contentDescription="@string/mark_icon_description" />

                <TextView
                    android:id="@+id/markTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="Оцінка викладача"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- Education Form Information -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_education"
                    android:contentDescription="@string/education_icon_description" />

                <TextView
                    android:id="@+id/educationFormTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="Форма навчання: Денна"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- Diploma Number Information -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_document"
                    android:contentDescription="@string/diploma_icon_description" />

                <TextView
                    android:id="@+id/diplomNumberFormTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="Номер диплому"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>